commit update for positive test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,4 @@
 autobahn.defaultUrl=https://autobahn.security/signup
 autobahn.defaultEmailUrl=https://mail.tm/en/
 autobahn.password=TestingQwerty123!
+autobahn.defaultPhoneNumber=81233790035
