--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,10 @@
       <artifactId>hamcrest</artifactId>
       <version>2.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
   </dependencies>
 </project>
