one of the negative test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,5 +2,6 @@
 
 autobahn.defaultUrl=https://autobahn.security/signup
 autobahn.defaultEmailUrl=https://mail.tm/en/
+autobahn.existingEmail=doe299@yogirt.com
 autobahn.password=TestingQwerty123!
 autobahn.defaultPhoneNumber=81233790035
